--- a/TODO
+++ b/TODO
@@ -1,13 +1,9 @@
 
-  - Support :
-    - Rsync with ssh (done)
-    - Version control in client/server
-    - Per entry exclude, include options (done)
-    - Easy restore
-    - Compression
-    - Destination disk size checks
+    * Easy restore tool (command line/Web GUI)
+    * GUI tool to modify the config.yaml (perhaps using python-gtk)
+    * Desktop panel status monitor for openduckbill
+    * Add better file version support (instead of rsync's backup feature)
+    * Support compression at remote end.
+    * Ability to check backup destination disk space/quota.
+    * Read config during runtime. 
 
-  - Add :
-    - README
-    - INSTALL ?
-    - Method comments
