--- a/trunk/docs/README
+++ b/trunk/docs/README
@@ -79,6 +79,9 @@ Features
     * Has built-in logging system
     * Daemon mode and Non-daemon mode
     * Extensive DEBUG info mode 
+    * Fully client side application
+      * Minimal (or no) on configuration required on server
+
 
 Requirements
 -------------
