--- a/wiki/OpenduckbillReadme.wiki
+++ b/wiki/OpenduckbillReadme.wiki
@@ -36,7 +36,7 @@
   * Daemon mode and Non-daemon mode
   * Extensive DEBUG info mode
   * Fully client side application
-    * Minimal (or no) on configuration required on server
+    * Minimal (or no) configuration required on server
 
 = Requirements =
 
