Edited wiki page through web user interface.

--- a/wiki/OpenduckbillAccessControl.wiki
+++ b/wiki/OpenduckbillAccessControl.wiki
@@ -1,3 +1,4 @@
+#labels Featured,Phase-Deploy,Phase-Support,README
 = Setting up passwordless ssh login when backup method is RSYNC (over ssh) =
 
   Openduckbill runs in background as a daemon program and is designed to transfer backup data, whenever it finds that some change has been made to the files/directories marked for backup. When the "backupmethod" is selected as RSYNC, openduckbill uses rsync to communicate with the remote ssh server, where it dumps the backup data to a directory specified (remotemount) in config.yaml. However, this kind of backup presents a new hurdle - Openduckbill will need the password of the remote user every time it wants to dump some data. This is rather painful, if the user running openduckbill has to supply his/her password every time. So now, passwordless ssh access needs to be setup which will eliminate the need for the user to supply password when data transfer to remote server is required. So here we setup passwordless ssh using public/private keys. The assumption here is that, the user has a home directory in the remote ssh server, where he/she can place the public key. There are excellent resources out there in the web which mentions how to make this work. But in a nutshell, this is what needs to be done.
