Edited wiki page through web user interface.

--- a/wiki/OpenduckbillReadme.wiki
+++ b/wiki/OpenduckbillReadme.wiki
@@ -1,4 +1,4 @@
-#labels Phase-Deploy,Phase-Support,Featured
+#labels Phase-Deploy,Phase-Support,Featured,README
 = Openduckbill =
 
 = Introduction =
