Added a "Latest version" section, so that users are given a hint to look for more up-to-date versions online, in-case docs fail to make the released package.

--- a/docs/README
+++ b/docs/README
@@ -1,6 +1,7 @@
 Openduckbill
 -------------
 
+ Latest Version
  Introduction
  Features
  Requirements
@@ -40,6 +41,11 @@ Openduckbill
  Project URL
  Reference Links
 
+
+Latest Version
+--------------
+
+   The latest version of these docs are here: http://code.google.com/p/openduckbill/w/list
 
 Introduction
 -------------
