--- a/trunk/docs/README
+++ b/trunk/docs/README
@@ -1,6 +1,7 @@
 Openduckbill
 -------------
 
+ Latest Version
  Introduction
  Features
  Requirements
@@ -40,6 +41,11 @@ Openduckbill
  Project URL
  Reference Links
 
+
+Latest Version
+--------------
+
+   The latest version of these docs are here: http://code.google.com/p/openduckbill/w/list
 
 Introduction
 -------------
